perbaikan query, tonase HK
